fix(classified ads list modals): fix of overflow issue
- fix of overflow issue allowing the modal to be scrollable.

--- a/src/components/JobCard/ModalHolder/ModalDefault.scss
+++ b/src/components/JobCard/ModalHolder/ModalDefault.scss
@@ -8,6 +8,7 @@
   border-radius: 10px;
   border: 1px solid rgba(160, 160, 160, 0.6);
   box-shadow: 0 0 3px rgba(160, 160, 160, 0.8);
+  overflow: scroll;
 }
 
 @media #{$BREAKPOINT-MOBILE-LAND} {
